--- a/index.hbs
+++ b/index.hbs
@@ -1,9 +1,13 @@
+---
+title: Warm lamp chat
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="index.pcss">
+    <title>{{title}}</title>
 </head>
 <body>
     <div>
