--- a/src/components/error_block.pcss
+++ b/src/components/error_block.pcss
@@ -1,6 +1,10 @@
+:root {
+    --error-code-text-color: #5126BC;
+}
+
 .not-found__code {
     font-size: 100px;
-    color: #5126BC;
+    color: var(--error-code-text-color);
 }
 
 .not-found__message {
