--- a/src/components/navigation.pcss
+++ b/src/components/navigation.pcss
@@ -1,13 +1,18 @@
+:root {
+  --nav-link-color: #000000;
+  --nav-link-hover-color: #5162BC;
+}
+
 a {
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
-    color: #000000;
+    color: var(--nav-link-color);
   }
 
 a:hover {
-  text-decoration: underline #5162BC;
+  text-decoration: underline var(--nav-link-hover-color);
 }
 
 .slash {
