--- a/src/pages/authorization.pcss
+++ b/src/pages/authorization.pcss
@@ -1,3 +1,8 @@
+:root {
+  --form-container-bg: #FFFFFF;
+  --form-border-color: #5162BC;
+}
+
 .main {
   display: flex;
   align-items: center;
@@ -12,11 +17,11 @@
   padding-top: 58px;
   margin: 0;
   border: 1px solid;
-  background: #ffffff;
+  background: var(--form-container-bg);
   background-blend-mode: multiply;
   border-width: 4px 0.5px;
   border-style: solid;
-  border-color: #5162bc;
+  border-color: var(--form-border-color);
   border-radius: 30px;
 }
 
