--- a/src/pages/user_change_password.hbs
+++ b/src/pages/user_change_password.hbs
@@ -16,6 +16,7 @@ fields:
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="./user_change_password.pcss">
     <link rel="stylesheet" href="../components/input.pcss">
@@ -23,6 +24,7 @@ fields:
 </head>
 <body>
     <div class="main">
+        <main>
         <div class="grid">
             <div class="user-data__block">
                 <div class="image-avatar">
@@ -52,6 +54,7 @@ fields:
                 <img src="/static/cross.png" class="user-settings__back" >
             </div>
         </div>
+        </main>
     </div>
 </body>
 </html>
