--- a/src/pages/user_settings.hbs
+++ b/src/pages/user_settings.hbs
@@ -26,6 +26,7 @@ fields:
 </head>
 <body>
     <div class="main">
+        <main>
         <div class="grid">
             <div class="user-data__block">
                 <div class="user-data-avatar__container">
@@ -60,6 +61,7 @@ fields:
                 <img src="/static/cross.png" class="user-settings__back" >
             </div>
         </div>
+        </main>
     </div>
 </body>
 </html>
