--- a/index.hbs
+++ b/index.hbs
@@ -7,6 +7,7 @@ title: Warm lamp chat
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
 </head>
 <body>
