--- a/src/components/Button/button.pcss
+++ b/src/components/Button/button.pcss
@@ -1,6 +1,6 @@
 :root {
     --button-bg-color: #5162BC;
-    --button-text-color: #FFFFFF;
+    --button-text-color: #FFF;
     --button-bg-hover: #7986c3;
 }
 
@@ -8,7 +8,6 @@ button {
     width: 180px;
     height: 41px;
     background: var(--button-bg-color);
-    border: 0px;
     border-radius: 10px;
     font-size: 14px;
     color: var(--button-text-color);
