--- a/src/components/message.pcss
+++ b/src/components/message.pcss
@@ -1,19 +1,27 @@
+:root {
+    --messages-left-background-color: #F8F8F8;
+    --messages-right-background-color: #E4EDFD;
+    --messages-time-font-color: #999;
+
+
+}
+
 .left {
     width: 402px;
     padding: 11px;
-    background-color: #F8F8F8;
-    border-radius: 0 10px 10px 10px;
+    background-color: var(--messages-left-background-color);
+    border-radius: 0 10px 10px;
 }
 
 .right {
     padding: 11px;
-    background-color: #E4EDFD;
-    border-radius: 10px 10px 0px 10px;
+    background-color: var(--messages-right-background-color);
+    border-radius: 10px 10px 0;
     margin-left: auto
 }
 
 .time {
-    color: #999999;
+    color: var(--messages-time-font-color);
     font-size: 9px;
     margin-left: auto
 }
