--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
 </head>
 <body>
     <div>
         <nav>
-            <a href="./pages/authorization.hbs">Авторизация</a> /
+            <a href="./pages/Authorization/authorization.hbs">Авторизация</a> /
             <a href="./pages/registration.hbs">Регистрация</a> /
             <a href="./pages/chat.hbs">Страница со списком чатов (заглушка) </a> /
             <a href="./pages/user_settings.hbs">Настройки пользователей</a> / 
