Вёрстка компонента ProfileBlock

--- a/src/components/Input/input.pcss
+++ b/src/components/Input/input.pcss
@@ -4,9 +4,8 @@
 }
 
 .input-text__field {
-  margin:10px;
-  box-sizing: border-box;
-  text-align: left;
+  margin-top:20px;
+  box-sizing: content-box;
   padding-left: 14px;
   background: var(--input-bg-color);
   font-style: normal;
