--- a/src/pages/Authorization/authorization.pcss
+++ b/src/pages/Authorization/authorization.pcss
@@ -11,6 +11,7 @@
 }
 
 .auth-form__container {
+  position: relative;
   box-sizing: border-box;
   width: 340px;
   height: 450px;
@@ -29,18 +30,17 @@
   text-align: center;
 }
 
-.input-fields__container {
-  margin-left:58px;
+.auth-form {
+  position: absolute;
+  margin: 0 auto;
+  top:150px;
+  left:50px;
   width:224px;
-  margin-top: 83px;
 }
 
-.input-field {
-  width: 100%;
-}
-
-.button__container {
+.auth-form button {
   text-align: center;
+  margin-left: 30px;
   margin-top: 83px;
   margin-bottom: auto;
 }
