--- a/src/pages/UserChangePassword/user_change_password.hbs
+++ b/src/pages/UserChangePassword/user_change_password.hbs
@@ -1,23 +1,12 @@
-<div class="main">
+<div class="user-change_password__main">
     <main>
-        <div class="grid">
-            <div class="user-data__block">
-                <div class="image-avatar">
-                    <img src="person.png">
-                </div>
-                <div>
-                    {{{labelUserName}}}
-                    {{{labelEmail}}}
-                </div>
-                <div class="buttons-change__container">
-                    {{{btnChangeSettings}}}
-                </div>
-            </div>
-            <div class="user-settings__container">
+        <div class="user-change_password__grid">
+            {{{profileInfoBlock}}}
+            <div>
                 {{{formUserChangePassword}}}
             </div>
-            <div class="cross__block">
-                <img src="cross.png" class="user-settings__back">
+            <div>
+                <img src="cross.png" class="user-change_password__back">
             </div>
         </div>
     </main>
