--- a/src/pages/UserChangePassword/user_change_password.pcss
+++ b/src/pages/UserChangePassword/user_change_password.pcss
@@ -1,53 +1,36 @@
-.main {
+.user-change_password__main {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.grid {
+.user-change_password__grid {
     display: grid;
     padding: 10px 15px;
     grid-template-columns: 300px 550px 300px;
-	grid-template-rows: 150px 150px;
 	grid-gap: 20px;
 	grid-auto-flow: row;
   }
 
-.grid * {
+.user-change_password__grid div {
     text-align: center;
 	padding: 10px 15px;
 	font-family: sans-serif;
 }
 
-.user-data__name {
-    display: inline-block;
-    margin-top:-15px;
-    font-size: 25px;
+.user-change_password__form {
+    width: 500px;
 }
 
-.user-data__email {
-    position:relative;
-}
-
-.user-data__block img {
-    width: 200px;
-    height: 200px;
-}
-
-.user-settings__form {
-    margin-top: 50px;
-}
-
-.user-settings__field {
-    margin-top: 15px;
-}
-
-.user-settings__back {
+.user-change_password__back {
     width: 30;
     height: 30;
     cursor: pointer;
 }
 
-.button-change__container{
-    margin: 20px;
-}
+.user-change_password__grid form>button {
+    text-align: center;
+    margin-left: 30px;
+    margin-top: 100px;
+    margin-bottom: auto;
+  }
