--- a/src/components/Form/form.hbs
+++ b/src/components/Form/form.hbs
@@ -1,10 +1,8 @@
 <form class={{class}}>
-    <div class="input-field">
+    <div>
         {{#each fields}}
             {{{this}}}
         {{/each}}
     </div>
-    <div class="button__container">
         {{{button}}}
-    </div>
 </form>
