--- a/src/pages/UserSettings/user_settings.hbs
+++ b/src/pages/UserSettings/user_settings.hbs
@@ -1,27 +1,11 @@
-<div class="main">
+<div class="user-settings__main">
     <main>
-        <div class="grid">
-            <div class="user-data__block">
-                <div class="user-data-avatar__container">
-                    <div class="image-avatar">
-                        <img src="person.png" alt="Сменить аватар">
-                    </div>
-                    <div class="image-avatar__caption">
-                        Сменить аватар
-                    </div>
-                </div>
-                <div>
-                    {{{labelUserName}}}
-                    {{{labelEmail}}}
-                </div>
-                <div class="button-change__container">
-                    {{{btnChangePswd}}}
-                </div>
-            </div>
-            <div class="user-settings__container">
+        <div class="user-settings__grid">
+            {{{profileInfoBlock}}}
+            <div>
                 {{{formUserSettings}}}
             </div>
-            <div class="cross__block">
+            <div>
                 <img src="cross.png" class="user-settings__back">
             </div>
         </div>
