--- a/src/components/Message/message.pcss
+++ b/src/components/Message/message.pcss
@@ -2,26 +2,28 @@
     --messages-left-background-color: #F8F8F8;
     --messages-right-background-color: #E4EDFD;
     --messages-time-font-color: #999;
-
-
 }
 
-.left {
+.message_left {
     width: 402px;
+    font-size: 15px;
     padding: 11px;
     background-color: var(--messages-left-background-color);
     border-radius: 0 10px 10px;
 }
 
-.right {
+.message_right {
+    font-size: 15px;
     padding: 11px;
     background-color: var(--messages-right-background-color);
     border-radius: 10px 10px 0;
     margin-left: auto
 }
 
-.time {
+.message_time {
+    display: block;
+    padding-top: 10px;
     color: var(--messages-time-font-color);
     font-size: 9px;
-    margin-left: auto
+    text-align: end;
 }
