--- a/src/pages/Chat/chat.pcss
+++ b/src/pages/Chat/chat.pcss
@@ -6,23 +6,19 @@
     --chats-messages-color: #1E1E1E;
 }
 
-.main {
-  align-items: center;
-  justify-content: center;
-}
-
-.grid {
+.chats-container__grid {
   display: grid;
   grid-template-columns: 310px auto;
   grid-gap: 20px;
   grid-auto-flow: row;
+  height: 650px;
 }
 
-.grid * {
+.chats-container__grid div {
   font-family: sans-serif;
 }
 
-.chats-grid {
+.chats__grid {
   background-color: var(--chats-background-color);
   position: relative;
   border-right: 1px solid var(--chats-border-color);
@@ -31,12 +27,13 @@
 }
 
 .chat-search {
-    padding: 10px;
+    padding: 25px;
 }
 
 .label-profile {
   position: absolute;
   right: 10px;
+  cursor: pointer;
 }
 
 .input-fields__container {
@@ -50,23 +47,14 @@
   margin-bottom: 17px;
 }
 
-.avatar {
+.avatar_big {
     height: 47px;
     width:47px;
 }
 
-.avatar.small {
+.avatar_small {
     height: 34px;
     width:34px;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid var(--chats-border-color);
-    margin: 1em 0;
-    padding: 0;
 }
 
 .chats-profiles__container {
@@ -84,27 +72,8 @@ hr {
     display: inline-block;
 }
 
-.profile-info__name {
-    display: inline-block;
-    margin-bottom: 4px;
-    color: var(--chats-profile-name-color);
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.profile-info__message {
-    display: inline-block;
-    color: var(--chats-font-color);
-    font-size: 12px;
-}
-
-.profile-info__time {
-    font-size: 9px;
-    display: block;
-    margin-left: auto;
-}
-
 .messages-grid {
+    position: relative;
     padding: 10px;
 }
 
@@ -136,4 +105,45 @@ hr {
 .messages__container * {
     color: var(--chats-messages-color);
     font-size: 12px;
+}
+
+.messages-grid hr {
+    width:100%
+}
+
+.messages-field__container {
+    display: flex
+}
+
+.messages-field__input {
+    width:850px;
+    margin-left: 7px
+}
+
+.messages-field__input input {
+    width: 950px
+}
+
+.messages-clip__icon {
+    margin-top:5px
+}
+
+.messages-field__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 140px;
+}
+
+.messages-field__container button {
+    width:35px;
+    height: 35px;
+    border-radius: 50%;
+    background-image: url("../../../static/arrow_right.png");
+    background-size: 100%;
+}
+
+.footer {
+    position:absolute;
+    bottom:0
 }
