--- a/src/blocks/ContextMenu/contextMenu.pcss
+++ b/src/blocks/ContextMenu/contextMenu.pcss
@@ -1,3 +1,7 @@
+:root {
+    --context_menu_bg_color: #5162BC
+}
+
 .context_menu__container {
     width: 21px;
     cursor: pointer;
@@ -6,7 +10,7 @@
 .context_menu__line {
     height: 2.8px;
     width: 100%;
-    background-color: #5162BC;
+    background-color: var(--context_menu_bg_color);
     border-radius: 10px;
     margin-bottom: 2.8px;
 }
