--- a/src/pages/Chat/chat.hbs
+++ b/src/pages/Chat/chat.hbs
@@ -41,7 +41,7 @@
 
                     <p><a href="/"><img class="messages-clip__icon" src="clip.png" width="32px" height="32px"></img></a>
                     </p>
-                    <div class="messages-field__input">{{{messagesInput}}}</div>
+                    <div class="messages-field__input">{{{messagesField}}}</div>
                     <div class="messages-field__button">
                         {{{sendButton}}}
                     </div>
