--- a/src/pages/UserChangePassword/user_change_password.pcss
+++ b/src/pages/UserChangePassword/user_change_password.pcss
@@ -18,8 +18,14 @@
 	font-family: sans-serif;
 }
 
+.user-change_password__grid .error-message {
+    text-align: start;
+	padding: 0;
+    margin-top: 2px;
+}
+
 .user-change_password__form {
-    width: 500px;
+    width: 550px;
 }
 
 .user-change_password__back {
