--- a/src/pages/UserSettings/user_settings.pcss
+++ b/src/pages/UserSettings/user_settings.pcss
@@ -18,6 +18,12 @@
   font-family: sans-serif;
 }
 
+.user-settings__grid .error-message {
+  padding: 0;
+  text-align: start;
+  margin-top: 2px;
+}
+
 .user-settings__form {
   width: 550px;
 }
