Переходы между страницами

--- a/src/blocks/ChatMessageItem/chatMessageItem.hbs
+++ b/src/blocks/ChatMessageItem/chatMessageItem.hbs
@@ -7,7 +7,7 @@
         {{{labelChatName}}}
         {{{labelChatInfo}}}
     </div>
-    <div class="profile-info__time">
+    <div class="chat-info-time">
         {{{labelChatTime}}}
     </div>
 </div>
