--- a/src/blocks/ChatMessageItem/chatMessageItem.pcss
+++ b/src/blocks/ChatMessageItem/chatMessageItem.pcss
@@ -16,7 +16,7 @@
 }
 
 .chat-profile-info{
-    width: min-content;
+    width: 100px;
     margin: 10px;
     display: inline-block;
 }
@@ -42,9 +42,10 @@
 
 .chat-info-time {
     font-size: 9px;
-    display: block;
+    display: content;
     margin-left: auto;
 }
+
 
 hr {
     display: block;
