--- a/src/blocks/Navigation/navigation.hbs
+++ b/src/blocks/Navigation/navigation.hbs
@@ -1,4 +1,4 @@
-<div><a href={{link1}}>{{menu_title1}}</a> 
+<div><label class="nav-link">{{{link1}}}</label> 
 <span class="slash">/</span> 
-<a href={{link2}}>{{menu_title2}}</a>
+<label class="nav-link">{{{link2}}}</label>
 </div>
