--- a/src/blocks/Navigation/navigation.pcss
+++ b/src/blocks/Navigation/navigation.pcss
@@ -3,7 +3,7 @@
   --nav-link-hover-color: #5162BC;
 }
 
-a {
+.nav-link a {
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
@@ -11,7 +11,7 @@ a {
     color: var(--nav-link-color);
   }
 
-a:hover {
+  .nav-link a:hover {
   text-decoration: underline var(--nav-link-hover-color);
 }
 
