--- a/src/pages/Chat/chat.hbs
+++ b/src/pages/Chat/chat.hbs
@@ -15,6 +15,8 @@
                     {{{chatMessageItem1}}}
                     {{{chatMessageItem2}}}
                     {{{chatMessageItem3}}}
+                    {{{chatMessageItem4}}}
+                    {{{chatMessageItem5}}}
                 </div>
             </div>
         </div>
