--- a/src/blocks/ContextMenu/contextMenu.pcss
+++ b/src/blocks/ContextMenu/contextMenu.pcss
@@ -1,5 +1,5 @@
 :root {
-    --context_menu_bg_color: #5162BC
+    --context-menu-bg-color: #5162BC
 }
 
 .context_menu__container {
@@ -10,7 +10,7 @@
 .context_menu__line {
     height: 2.8px;
     width: 100%;
-    background-color: var(--context_menu_bg_color);
+    background-color: var(--context-menu-bg-color);
     border-radius: 10px;
     margin-bottom: 2.8px;
 }
