--- a/src/pages/Authorization/authorization.hbs
+++ b/src/pages/Authorization/authorization.hbs
@@ -1,5 +1,5 @@
 
-<div class="main">
+<div class="auth-main">
         <div class="auth-form__container">
                 <div class="nav__container">
                         {{{navigation}}}
