--- a/src/pages/Chat/chat.pcss
+++ b/src/pages/Chat/chat.pcss
@@ -30,7 +30,10 @@
     padding: 25px;
 }
 
+
 .label-profile {
+  text-decoration: none;
+  color: blue;
   position: absolute;
   right: 10px;
   cursor: pointer;
