--- a/src/pages/Registration/registration.hbs
+++ b/src/pages/Registration/registration.hbs
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="register-main">
         <div class="register-form__container">
                 <div class="nav__container">
                         {{{navigation}}}
