--- a/src/pages/Registration/registration.pcss
+++ b/src/pages/Registration/registration.pcss
@@ -3,7 +3,7 @@
   --form-border-color: #5162bc;
 }
 
-.main {
+.register-main {
   display: flex;
   align-items: center;
   justify-content: center;
