--- a/src/pages/UserChangePassword/user_change_password.hbs
+++ b/src/pages/UserChangePassword/user_change_password.hbs
@@ -1,12 +1,10 @@
 <div class="user-change_password__main">
     <main>
         <div class="user-change_password__grid">
+            {{{btnBack}}}
             {{{profileInfoBlock}}}
             <div>
                 {{{formUserChangePassword}}}
-            </div>
-            <div>
-                <img src="cross.png" class="user-change_password__back">
             </div>
         </div>
     </main>
