--- a/src/pages/UserSettings/user_settings.hbs
+++ b/src/pages/UserSettings/user_settings.hbs
@@ -1,13 +1,12 @@
 <div class="user-settings__main">
     <main>
         <div class="user-settings__grid">
+            {{{btnBack}}}
             {{{profileInfoBlock}}}
             <div>
                 {{{formUserSettings}}}
             </div>
-            <div>
-                <img src="cross.png" class="user-settings__back">
-            </div>
+            
         </div>
     </main>
 </div>
