Отправки формы и очистка на странице настроек пользователя

--- a/src/pages/UserChangePassword/user_change_password.hbs
+++ b/src/pages/UserChangePassword/user_change_password.hbs
@@ -1,8 +1,12 @@
 <div class="user-change_password__main">
     <main>
         <div class="user-change_password__grid">
-            {{{btnBack}}}
-            {{{profileInfoBlock}}}
+            <div>
+                {{{btnBack}}}
+            </div>
+            <div>
+                {{{profileInfoBlock}}}
+            </div>
             <div>
                 {{{formUserChangePassword}}}
             </div>
