--- a/src/pages/UserSettings/user_settings.hbs
+++ b/src/pages/UserSettings/user_settings.hbs
@@ -1,12 +1,17 @@
 <div class="user-settings__main">
     <main>
         <div class="user-settings__grid">
-            {{{btnBack}}}
-            {{{profileInfoBlock}}}
+            <div>
+                {{{btnBack}}}
+            </div>
+            <div>
+                {{{profileInfoBlock}}}
+                {{{btnChangePassword}}}
+                {{{btnLogout}}}
+            </div>
             <div>
                 {{{formUserSettings}}}
             </div>
-            
         </div>
     </main>
 </div>
