--- a/src/pages/UserSettings/user_settings.pcss
+++ b/src/pages/UserSettings/user_settings.pcss
@@ -1,5 +1,5 @@
 .user-settings__main {
-  width:100%;
+  display: grid;
   align-items: center;
   justify-content: center;
 }
@@ -7,13 +7,12 @@
 .user-settings__grid {
   display: grid;
   padding: 10px 15px;
-  grid-template-columns: 30px 550px 550px;
-  grid-gap: 15px;
+  grid-template-columns: 130px 400px 550px;
+  grid-gap: 0;
   grid-auto-flow: row;
 }
 
 .user-settings__grid div {
-  width:100%;
   text-align: center;
   padding: 10px 15px;
   font-family: sans-serif;
@@ -30,9 +29,9 @@
 }
 
 .user-settings__btnback {
-  background-image: url('../../../static/arrow_left.png');
-  width: 30;
-  height: 30;
+  /**background-image: url('../../../static/arrow_left.png');
+  /** width: 30;
+  /** height: 30; **/
   cursor: pointer;
 }
 
