--- a/src/blocks/ProfileInfoBlock/profileInfoBlock.hbs
+++ b/src/blocks/ProfileInfoBlock/profileInfoBlock.hbs
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div>
-        {{{labelUserName}}}
+        {{{labelName}}}
         {{{labelEmail}}}
     </div>
     <div class="button-change__container">
