--- a/src/components/Input/input.hbs
+++ b/src/components/Input/input.hbs
@@ -1,1 +1,1 @@
-<input type={{type}} class="input-text__field" name={{name}} placeholder={{placeholder}} />
+<input type={{type}} class="input-text__field" name={{name}} placeholder='{{placeholder}}' />
