--- a/src/blocks/ProfileInfoBlock/profileInfoBlock.hbs
+++ b/src/blocks/ProfileInfoBlock/profileInfoBlock.hbs
@@ -1,7 +1,8 @@
 <div class="user-data__block">
     <div class="user-data-avatar__container">
         <div class="image-avatar">
-            <img src="person.png" alt="Сменить аватар">
+            {{{Avatar}}}
+<!--            <img src="person.png" alt="Сменить аватар">-->
         </div>
         <div class="image-avatar__caption">
             Сменить аватар
