--- a/src/pages/UserSettings/user_settings.hbs
+++ b/src/pages/UserSettings/user_settings.hbs
@@ -6,6 +6,7 @@
             </div>
             <div>
                 {{{profileInfoBlock}}}
+                {{{formAvatar}}}
                 {{{btnChangePassword}}}
                 {{{btnLogout}}}
             </div>
