--- a/src/blocks/Chat/chat.hbs
+++ b/src/blocks/Chat/chat.hbs
@@ -1,4 +1,4 @@
-<div class="chat-profiles__wrapper">
+<div class="chat-profiles__wrapper {{#if isSelected}} chat--selected {{/if}}">
     <hr>
     <div class="profile-avatar">
         {{{bigAvatar}}}
