--- a/src/blocks/Chat/chat.pcss
+++ b/src/blocks/Chat/chat.pcss
@@ -34,6 +34,10 @@
     font-weight: bold;
 }
 
+.chat--selected {
+    background: var(--chats-message-item-bgcolor-hover);
+}
+
 .chat-info-message {
     display: inline-block;
     color: var(--chats-font-color);
