--- a/src/components/ChatSettingsPopup/chatsettingspopup.hbs
+++ b/src/components/ChatSettingsPopup/chatsettingspopup.hbs
@@ -1,6 +1,7 @@
 <div class="chat-settings__popup">
     <div class="chat-items__list">
-        {{{addChatLink}}}<br>
+        {{{addUser}}}<br>
+        <hr>
         {{{deleteChatLink}}}
     </div>
 </div>
