--- a/src/pages/UserSettings/user_settings.hbs
+++ b/src/pages/UserSettings/user_settings.hbs
@@ -7,8 +7,10 @@
             <div>
                 {{{profileInfoBlock}}}
                 {{{formAvatar}}}
-                {{{btnChangePassword}}}
-                {{{btnLogout}}}
+                <div class="form-avatar-buttons__container">
+                    {{{btnChangePassword}}}
+                    {{{btnLogout}}}
+                </div>
             </div>
             <div>
                 {{{formUserSettings}}}
