--- a/src/pages/UserSettings/user_settings.pcss
+++ b/src/pages/UserSettings/user_settings.pcss
@@ -34,10 +34,21 @@
   /** height: 30; **/
   cursor: pointer;
 }
+.user-settings__grid form {
+  display: inline;
+  position: relative;
+  top: -5%;
+}
+
 
 .user-settings__grid form>button {
   text-align: center;
   margin-left: 30px;
-  margin-top: 100px;
+  margin-top: 30px;
   margin-bottom: auto;
+}
+
+.form-avatar-buttons__container>button {
+  width: 160px;
+  margin-top: 30px;
 }
