--- a/src/pages/Chat/chat.pcss
+++ b/src/pages/Chat/chat.pcss
@@ -1,9 +1,9 @@
 :root {
-    --chats-background-color: #FBFBFB;
-    --chats-border-color: #EAEAEA;
-    --chats-font-color: #999;
-    --chats-profile-name-color: #000;
-    --chats-messages-color: #1E1E1E;
+  --chats-background-color: #fbfbfb;
+  --chats-border-color: #eaeaea;
+  --chats-font-color: #999;
+  --chats-profile-name-color: #000;
+  --chats-messages-color: #1e1e1e;
 }
 
 .chats-container__grid {
@@ -26,17 +26,29 @@
   color: var(--chats-font-color);
 }
 
-.chat-search {
-    padding: 25px;
+.chat-profile__label {
+  padding: 25px;
+  position: relative;
+  text-align: end;
 }
 
+.chat-adduser__label::before {
+  background-image: url("../../../static/new_chat.png");
+  background-size: 20px 20px;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  content: "";
+  margin-left: 10px;
+  margin-right: 5px;
+  /* content:""; */
+}
 
-.label-profile {
-  text-decoration: none;
-  color: blue;
-  position: absolute;
-  right: 10px;
-  cursor: pointer;
+.chat-adduser__label {
+  font-size: large;
+  /* font-weight: bold; */
+  padding-right: 25px;
+  text-align: end;
 }
 
 .input-fields__container {
@@ -51,102 +63,76 @@
 }
 
 .avatar_big {
-    height: 47px;
-    width:47px;
+  height: 47px;
+  width: 47px;
 }
 
 .avatar_small {
-    height: 34px;
-    width:34px;
+  height: 34px;
+  width: 34px;
 }
 
 .chats-list__container {
-    padding: 0 10px 10px;
-    display: grid;
+  padding: 0 10px 10px;
+  display: grid;
 }
 
 .profiles-wrapper {
-    display: flex;
+  display: flex;
 }
 
-.profile-info{
-    width: min-content;
-    margin: 10px;
-    display: inline-block;
+.profile-info {
+  width: min-content;
+  margin: 10px;
+  display: inline-block;
 }
 
 .messages-grid {
-    position: relative;
-    padding: 10px;
+  position: relative;
+  padding: 10px;
 }
 
 .companion-info__wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .profile-info__name.messages {
-    width: 92%;
-    margin: 10px;
+  width: 92%;
+  margin: 10px;
 }
 
 .messages-date {
-    display: block;
-    text-align: center;
-    font-size: 11px;
-    color: var(--chats-font-color);
-    margin-top: 48px;
+  display: block;
+  text-align: center;
+  font-size: 11px;
+  color: var(--chats-font-color);
+  margin-top: 48px;
 }
 
 .messages__container {
-    display: grid;
-    row-gap: 30px;
-    margin-top: 30px;
+  display: grid;
+  row-gap: 30px;
+  margin-top: 30px;
 }
 
 .messages__container * {
-    color: var(--chats-messages-color);
-    font-size: 12px;
+  color: var(--chats-messages-color);
+  font-size: 12px;
 }
 
 .messages-grid hr {
-    width:100%
-}
-
-.messages-field__container {
-    display: flex
-}
-
-.messages-field__input {
-    width:850px;
-    margin-left: 7px
-}
-
-.messages-field__input input {
-    width: 950px
-}
-
-.messages-clip__icon {
-    margin-top:5px
-}
-
-.messages-field__button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 140px;
-}
-
-.messages-field__container button {
-    width:35px;
-    height: 35px;
-    border-radius: 50%;
-    background-image: url("../../../static/arrow_right.png");
-    background-size: 100%;
+  width: 100%;
 }
 
 .footer {
-    position:absolute;
-    bottom:0
+  position: absolute;
+  bottom: 0;
+}
+
+.chat-stub {
+  display: grid;
+  text-align: center;
+  align-items: center;
 }
