--- a/src/blocks/ChatItem/chatIem.hbs
+++ b/src/blocks/ChatItem/chatIem.hbs
@@ -1,7 +1,7 @@
 <div class="chat-profiles__wrapper {{#if isSelected}} chat--selected {{/if}}">
     <hr>
     <div class="profile-avatar">
-        {{{bigAvatar}}}
+        {{{smallAvatar}}}
     </div>
     <div class="chat-profile-info">
         {{{labelChatName}}}
