--- a/src/blocks/ChatItem/chatItem.pcss
+++ b/src/blocks/ChatItem/chatItem.pcss
@@ -22,8 +22,13 @@
 }
 
 .chat_item__avatar {
-    height: 47px;
-    width:47px;
+    height: 37px;
+    width:37px;
+}
+
+.chat_item__avatar img {
+    background-size: 37px;
+    background-repeat: no-repeat;
 }
 
 .chat-info-name {
