--- a/src/blocks/ProfileInfoBlock/profileInfoBlock.pcss
+++ b/src/blocks/ProfileInfoBlock/profileInfoBlock.pcss
@@ -11,28 +11,11 @@
     position:relative;
 }
 
-.user-data-avatar__container img {
-    width: 200px;
-    height: 200px;
+.image-avatar {
+    width: 220px;
+    height: 220px;
 }
 
-.user-data-avatar__container .image-avatar__caption {
-    opacity:0;
-    position:absolute;
-    bottom:0;
-    left:50%;
-    transform:translate(-50%, 0);
-    transition: 0.5s;
-    width:55%;
-    font-size:15px;
-    background-color: var(--avatar-caption-bg-color);
-    padding:10px 5px;
-    color: var(--avatar-caption-text-color);
-}
-
-.user-data-avatar__container:hover .image-avatar__caption {
-    opacity: 1;
-}
 
 .user-data__name {
     width:100%;
