--- a/src/blocks/UserItem/userItem.pcss
+++ b/src/blocks/UserItem/userItem.pcss
@@ -2,4 +2,9 @@
     background-color: rgb(209, 214, 225);
     border-radius: 5px;
     margin: 5px;
+    cursor: pointer;
+}
+
+.user-items__container label {
+    cursor: pointer;
 }
