--- a/src/components/Messenger/messenger.pcss
+++ b/src/components/Messenger/messenger.pcss
@@ -1,48 +1,5 @@
 .messages-field__container {
   display: flex;
-}
-
-.messages-field__input {
-  width: 850px;
-  margin-left: 7px;
-}
-
-.messages-field__input input {
-  width: 950px;
-}
-
-.messages-clip__icon {
-  margin-top: 5px;
-}
-
-.messages-field__button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 140px;
-}
-
-.messages-field__container button {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  background-image: url("../../../static/arrow_right.png");
-  background-size: 100%;
-}
-
-.footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-}
-
-.footer input {
-  position: relative;
-  bottom: 20px;
-  width: 955px;
-}
-
-.footer button {
-  position: relative;
-  bottom: 12px;
+  flex-direction: column;
+  row-gap: 15px;
 }
