--- a/src/pages/Chat/chat.hbs
+++ b/src/pages/Chat/chat.hbs
@@ -41,16 +41,10 @@
         </div>
         <hr>
         <div class="messages-date">{{{chatDate}}}</div>
-
-        <div class="messages__container">
-            {{{messageLeft}}}
-            {{{messageRight}}}
-        </div>
-
+            {{{messenger}}}
         <div class="footer">
-            <div class="messages-field__container">
-                {{{messenger}}}
-            </div>
+            {{{messageInput}}}
+            {{{sendButton}}}
         </div>
     </div>
     {{else}}
