--- a/src/pages/Chat/chat.pcss
+++ b/src/pages/Chat/chat.pcss
@@ -127,8 +127,28 @@
 }
 
 .footer {
+  width: 100%;
   position: absolute;
   bottom: 0;
+}
+
+.footer input {
+  position: relative;
+  bottom: 20px;
+  width: 955px;
+}
+
+.footer button {
+  position: relative;
+  bottom: 12px;
+}
+
+.footer button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-image: url("../../../static/arrow_right.png");
+  background-size: 100%;
 }
 
 .chat-stub {
