--- a/src/blocks/ProfileInfoBlock/profileInfoBlock.pcss
+++ b/src/blocks/ProfileInfoBlock/profileInfoBlock.pcss
@@ -1,5 +1,4 @@
 :root {
-    --avatar-caption-bg-color: #91a3d880;
     --avatar-caption-text-color: #fff;
   }
 
@@ -11,7 +10,7 @@
     position:relative;
 }
 
-.image-avatar {
+.user-avatar {
     width: 220px;
     height: 220px;
 }
