--- a/src/pages/Chat/chat.hbs
+++ b/src/pages/Chat/chat.hbs
@@ -23,8 +23,8 @@
     <div class="messages-grid">
         <div class="companion-info__wrapper">
             {{{smallAvatar}}}
-            <div class="profile-info__name messages">
-                <span>{{{chatTitle}}}</span>
+            <div class="profile-info__name">
+                {{{chatTitle}}}
             </div>
             <div>
                 {{{contextMenu}}}
