--- a/src/components/AddChatPopup/addChatPopup.hbs
+++ b/src/components/AddChatPopup/addChatPopup.hbs
@@ -1,6 +1,7 @@
 <div class="add-chat__popup">
     <div class="add-chat__input">
         {{{inputChatTitle}}}
+        {{{validationError}}}
     </div>
     <div class="add-chat-buttons__container">
         {{{confirmButton}}}
