--- a/src/components/AddChatPopup/addChatPopup.pcss
+++ b/src/components/AddChatPopup/addChatPopup.pcss
@@ -20,7 +20,14 @@
     margin-top: 15px;
 }
 
+.add-chat__input label {
+    height:5px;
+    color: red;
+    margin: 5px;
+    padding-top: 5px;
+}
+
 .add-chat-buttons__container {
     text-align: center;
-    margin-top: 10px;
+    padding-top: 25px;
 }
