Запрещаем отправку пустой формы

--- a/src/pages/Chat/chat.pcss
+++ b/src/pages/Chat/chat.pcss
@@ -90,6 +90,7 @@
 .messages-grid {
   position: relative;
   padding: 10px;
+  background-color: rgb(242, 243, 247);
 }
 
 .companion-info__wrapper {
