Удаление пользователя из чата

--- a/src/pages/Chat/chat.hbs
+++ b/src/pages/Chat/chat.hbs
@@ -37,6 +37,9 @@
                 {{#if isUserAddPopupShown}}
                 {{{addUserPopup}}}
                 {{/if}}
+                {{#if isUserDeletePopupShown}}
+                {{{deleteUserPopup}}}
+                {{/if}}
             </div>
         </div>
         <hr>
