Правки по ревью

--- a/src/blocks/UserItem/userItem.pcss
+++ b/src/blocks/UserItem/userItem.pcss
@@ -1,10 +1,14 @@
+:root {
+  --user-items-container: #d1d6e1;
+}
+
 .user-items__container {
-    background-color: rgb(209, 214, 225);
-    border-radius: 5px;
-    margin: 5px;
-    cursor: pointer;
+  background-color: var(--user-items-container);
+  border-radius: 5px;
+  margin: 5px;
+  cursor: pointer;
 }
 
 .user-items__container label {
-    cursor: pointer;
+  cursor: pointer;
 }
