--- a/src/components/Input/input.hbs
+++ b/src/components/Input/input.hbs
@@ -1,1 +1,1 @@
-<input type={{type}} class="input-text__field" id="{{id}}" name={{name}} placeholder='{{placeholder}}' />
+<input type={{type}} class="input-text__field" id="{{id}}" name={{name}} value="{{value}}" placeholder='{{placeholder}}'/>
