--- a/src/pages/UserChangePassword/user_change_password.pcss
+++ b/src/pages/UserChangePassword/user_change_password.pcss
@@ -7,7 +7,6 @@
     display: grid;
     padding: 10px 15px;
     grid-template-columns: 130px 400px 550px;
-	grid-gap: 0px;
 	grid-auto-flow: row;
   }
 
@@ -19,7 +18,6 @@
 
 .user-change_password__grid .error-message {
     text-align: start;
-	padding: 0;
     margin-top: 2px;
 }
 
@@ -28,8 +26,8 @@
 }
 
 .user-change_password__back {
-    width: 30;
-    height: 30;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
 }
 
