--- a/src/style.pcss
+++ b/src/style.pcss
@@ -1,26 +1,24 @@
-@import "./pages/Authorization/authorization.pcss";
-@import "./pages/Registration/registration.pcss";
-@import "./pages/UserChangePassword/user_change_password.pcss";
-@import "./pages/UserSettings/user_settings.pcss";
-@import "./pages/Chat/chat.pcss";
-@import "./components/Button/button.pcss";
-@import "./components/Input/input.pcss";
-@import "./components/Avatar/avatar.pcss";
-@import "./components/ValidationError/validation_error.pcss";
-@import "./blocks/Message/message.pcss";
-@import "./blocks/Navigation/navigation.pcss";
-@import "./blocks/ProfileInfoBlock/profileInfoBlock.pcss";
-@import "./blocks/ChatItem/chatItem.pcss";
-@import "./blocks/ContextMenu/contextMenu.pcss";
-@import "./pages/ErrorPage/error_page.pcss";
-@import "./components/ChatSettingsPopup/chatsettingspopup.pcss";
-@import "./components/AddChatPopup/addChatPopup.pcss";
-@import "./components/DeleteChatConfirmPopup/deleteChatConfirmPopup.pcss";
-@import "./components/AddUserPopup/addUserPopup.pcss";
-@import "./components/Link/link.pcss";
-@import "./blocks/ChatsList/chatsList.pcss";
-@import "./components/Messenger/messenger.pcss";
-@import "./components/UsersList/usersList.pcss";
-@import "./blocks/UserItem/userItem.pcss";
-@import "./components/DeleteUserPopup/deleteUserPopup.pcss";
-@import "./blocks/Field/field.pcss";
+@import url("./pages/Authorization/authorization.pcss");
+@import url("./pages/Registration/registration.pcss");
+@import url("./pages/UserChangePassword/user_change_password.pcss");
+@import url("./pages/UserSettings/user_settings.pcss");
+@import url("./pages/Chat/chat.pcss");
+@import url("./components/Button/button.pcss");
+@import url("./components/Input/input.pcss");
+@import url("./components/Avatar/avatar.pcss");
+@import url("./components/ValidationError/validation_error.pcss");
+@import url("./blocks/Message/message.pcss");
+@import url("./blocks/Navigation/navigation.pcss");
+@import url("./blocks/ProfileInfoBlock/profileInfoBlock.pcss");
+@import url("./blocks/ChatItem/chatItem.pcss");
+@import url("./blocks/ContextMenu/contextMenu.pcss");
+@import url("./pages/ErrorPage/error_page.pcss");
+@import url("./components/ChatSettingsPopup/chatsettingspopup.pcss");
+@import url("./components/AddChatPopup/addChatPopup.pcss");
+@import url("./components/DeleteChatConfirmPopup/deleteChatConfirmPopup.pcss");
+@import url("./components/AddUserPopup/addUserPopup.pcss");
+@import url("./components/Link/link.pcss");
+@import url("./components/Messenger/messenger.pcss");
+@import url("./components/UsersList/usersList.pcss");
+@import url("./blocks/UserItem/userItem.pcss");
+@import url("./components/DeleteUserPopup/deleteUserPopup.pcss");
